[package]
name = "simple-redis-server"
description = "A simple redis server written in Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bytes = "1.6.0"
enum_dispatch = "0.3.13"
